CRUD operations for entities

--- a/ColumnarDatabaseService/pom.xml
+++ b/ColumnarDatabaseService/pom.xml
@@ -78,6 +78,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-cassandra</artifactId>
+			<version>3.0.1</version> <!-- Proverite da li je verzija 3.0.1 -->
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
 	</dependencies>
