--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   eureka-server:
     build:
@@ -8,6 +6,8 @@ services:
     image: eureka-server:latest
     ports:
       - "8761:8761"
+    networks:
+      - my_network
 
   gateway-api:
     build:
@@ -21,25 +21,27 @@ services:
       - columnar-key-value-service
     ports:
       - "9000:9000"
-
+    networks:
+      - my_network
 
   columnar-key-value-service:
-     build:
-       context: ./ColumnarDatabaseService
-       dockerfile: Dockerfile
-     image: columnar-key-value-service:latest
-     depends_on:
-       - cassandradb
-       - eureka-server
-     restart: always
-     environment:
-       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka
-       SPRING_DATA_CASSANDRA_CONTACT_POINTS: cassandradb
-       SPRING_DATA_CASSANDRA_PORT: 9042
-     ports:
-       - "9050:9050"
-       - "5005:5005" # Debug port mapping
-
+    build:
+      context: ./ColumnarDatabaseService
+      dockerfile: Dockerfile
+    image: columnar-key-value-service:latest
+    depends_on:
+      - cassandradb
+      - eureka-server
+    restart: always
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka
+      SPRING_DATA_CASSANDRA_CONTACT_POINTS: cassandradb
+      SPRING_DATA_CASSANDRA_PORT: 9042
+    ports:
+      - "9050:9050"
+      - "5005:5005" # Debug port mapping
+    networks:
+      - my_network
 
   cassandradb:
     image: cassandra:latest
@@ -51,23 +53,42 @@ services:
       test: ["CMD-SHELL", "[ $$(nodetool statusgossip) = running ]"]
       interval: 30s
       timeout: 10s
+    networks:
+      my_network:
+        ipv4_address: 172.19.0.3
 
-  datastax-studio:
-    image: datastax/dse-studio:6.8.4
-    ports:
-      - "9091:9091"
-    environment:
-      DS_LICENSE: accept
+  cassandra-web:
+    image: dcagatay/cassandra-web:latest
     depends_on:
       - cassandradb
+    ports:
+      - 3000:3000
+    environment:
+      CASSANDRA_HOST_IPS: 172.19.0.3
+      CASSANDRA_PORT: 9042
+    restart: unless-stopped
     networks:
       - my_network
+
+  #datastax-studio:
+   # image: datastax/dse-studio:6.8.4
+    #ports:
+      #- "9091:9091"
+    #environment:
+     # DS_LICENSE: accept
+    #depends_on:
+     # - cassandradb
+    #networks:
+     # - my_network
 
 networks:
   my_network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.19.0.0/16
 
 volumes:
   data:
   influxdb-storage:
-  grafana_storage: { }
+  grafana_storage: {}
