Complex and simple queries added with dto objects and methods for handling them

--- a/ColumnarDatabaseService/src/main/resources/application.properties
+++ b/ColumnarDatabaseService/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=9050
 spring.application.name=columnar-database-service
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
-
+#Indikator da se sema kreira pri pokretarnju aplikacije ukoliko ne postoji
+#Moguce su i vrednosti NONE, CREATE, RECREATE, RECREATE-DROP-UNUSED
 spring.data.cassandra.contact-points=localhost
 spring.data.cassandra.keyspace-name=nais
 spring.data.cassandra.port=9042
