--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     depends_on:
       - eureka-server
       - columnar-key-value-service
-      - graph-service
+     # - graph-service
     ports:
       - "9000:9000"
     networks:
@@ -81,33 +81,6 @@ services:
      # - cassandradb
     #networks:
      # - my_network
-
-  graph-service:
-    build:
-      context: ./GraphDatabaseService
-      dockerfile: Dockerfile
-    image: graph-spring-example:latest
-    depends_on:
-      - eureka-server
-      - neo4j
-    environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka
-      SPRING_NEO4J_URI: "bolt://neo4j:7687"
-      SPRING_NEO4J_USERNAME: neo4j
-      SPRING_NEO4J_PASSWORD: password
-    ports:
-      - "9051:9051"
-
-  neo4j:
-    image: neo4j
-    container_name: neo4j
-    ports:
-      - "7474:7474"
-      - "7687:7687"
-    environment:
-      NEO4J_AUTH: neo4j/password
-    volumes:
-      - ./data:/data
 
 networks:
   my_network:
