--- a/ColumnarDatabaseService/pom.xml
+++ b/ColumnarDatabaseService/pom.xml
@@ -86,6 +86,12 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.8</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
