--- a/GatewayService/src/main/resources/application.yaml
+++ b/GatewayService/src/main/resources/application.yaml
@@ -20,3 +20,7 @@ spring:
           uri: lb://columnar-key-value-service
           predicates:
             - Path=/columnar-database-service/**
+        - id: graph-spring-example
+          uri: lb://graph-spring-example
+          predicates:
+            - Path=/graph-spring-example/**
