--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     depends_on:
       - eureka-server
       - columnar-key-value-service
-      - graph-service
+      - graph-spring-example
     ports:
       - "9000:9000"
     networks:
@@ -82,7 +82,7 @@ services:
     #networks:
      # - my_network
 
-  graph-service:
+  graph-spring-example:
     build:
       context: ./GraphDatabaseService
       dockerfile: Dockerfile
@@ -97,6 +97,8 @@ services:
       SPRING_NEO4J_PASSWORD: password
     ports:
       - "9051:9051"
+    networks:
+      - my_network
 
   neo4j:
     image: neo4j
@@ -108,6 +110,8 @@ services:
       NEO4J_AUTH: neo4j/password
     volumes:
       - ./data:/data
+    networks:
+      - my_network
 
 networks:
   my_network:
