--- a/ColumnarDatabaseService/pom.xml
+++ b/ColumnarDatabaseService/pom.xml
@@ -74,6 +74,11 @@
 			<version>2.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 		<!-- Dependency za rad sa Cassandra bazom podataka !-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -90,6 +95,12 @@
 			<groupId>com.github.librepdf</groupId>
 			<artifactId>openpdf</artifactId>
 			<version>1.3.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.vinsguru</groupId>
+			<artifactId>common-dto</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
