--- a/GraphDatabaseService/pom.xml
+++ b/GraphDatabaseService/pom.xml
@@ -71,6 +71,11 @@
 			<artifactId>openpdf</artifactId>
 			<version>1.3.8</version>
 		</dependency>
+		<dependency>
+			<groupId>com.vinsguru</groupId>
+			<artifactId>common-dto</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
