feat: Kafta docker and application.yml file updated

--- a/GraphDatabaseService/src/main/resources/application.yml
+++ b/GraphDatabaseService/src/main/resources/application.yml
@@ -10,6 +10,16 @@ spring:
   application:
     name: graph-database-service
 
+    
+spring.cloud.stream:
+  function:
+    definition: graphPlayerProcessor
+  bindings:
+    graphPlayerProcessor-in-0:
+      destination: column-player-event
+    graphPlayerProcessor-out-0:
+      destination: graph-player-event
+
 eureka:
   client:
     service-url:
