solved lombok problem

--- a/ColumnarDatabaseService/pom.xml
+++ b/ColumnarDatabaseService/pom.xml
@@ -55,6 +55,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -105,6 +107,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>rs.ac.uns.acs.nais.ColumnarDatabaseService.ColumnarDatabaseServiceApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
